# data-science-from-scratch-cpp

./: .gitignore  README.md
chapter-10/: CMakeLists.txt  different_joint_distributions.cpp  uniform_normal_histograms.cpp
chapter-11/: CMakeLists.txt  machine_learning_correctness.cpp  state-coords.txt
chapter-12/: CMakeLists.txt  knn-favorite-languages.cpp
chapter-13/: CMakeLists.txt  count_words.cpp  naive_bays_classifier.cpp  tokenize.cpp
chapter-14/: README.md
chapter-15/: CMakeLists.txt  README.md  estimate_beta_ridge.cpp
chapter-16/: CMakeLists.txt  README.md  predicted_premium_accounts.cpp
chapter-3/: CMakeLists.txt  simple-bar-chart-histogram.cpp  simple-bar.cpp  simple-line-chart.cpp  simple-plot.cpp  simple-scatter-plot.cpp
chapter-4/: readme.md
chapter-5/: CMakeLists.txt  readme.md  stats-test.cpp
chapter-6/: CMakeLists.txt  normal_cdf.cpp  normal_pdf.cpp  readme.md
chapter-7/: CMakeLists.txt  bayesian_distribution_test.cpp  bayesian_posterior_test.cpp  probabilities_test.cpp  readme.md
chapter-8/: CMakeLists.txt  actual_derivatives_vs_estimates.cpp  gradient_test.cpp  readme.md
common/: CMakeLists.txt  common.cpp  data.h  dimensionality_reduction.h  gradient.h  knn.h  linear_regression.h  logistic_regression.h  machinelearning.h  matplotlib.h  matrixmath.h  multiple_regression.h  naive_bayes.h  naive_bays_classifier.h  probabilities.h  statistics.h  vectormath.h
